# prefect-tutorial

./: pyproject.toml
notebooks/: 01_basic.ipynb
